--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,7 +85,7 @@
 	body {
 		height: 100%;
 		background-color: #ffffff;
-		background-image: url("../../images/escheresque_ste.png");
+		background-image: url("../../images/real_cf_@2X.png");
 		background-repeat: repeat;
 	}
 
